# hermes-openmax

./: .gitignore  .gitleaks.toml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
contract/: PROVENANCE.md
cws_agent_sdk/: __init__.py  access_policy.py  bridge.py  codec.py  config.py  contract.py  errors.py  http.py  providers.py  reporters.py  services.py  token.py  types.py  ws.py
hermes_openmax/: __init__.py  adapter.py  behavior.py  plugin.yaml  prompt.py  tools.py
hermes_openmax/skills/: workspace.md
hermes_openmax/skills/ops/: as.md  comm.md  conn.md  core.md  kb.md  tm.md
scripts/: generate_openmax_prompt.py
tests/: conftest.py  test_access_policy.py  test_adapter.py  test_adapter_runtime_parity.py  test_bridge.py  test_codec.py  test_contract.py  test_markdown.py  test_native_surface_parity.py  test_progress_notifications.py  test_prompt.py  test_reporters.py  test_runtime_parity.py  test_skill_alignment.py  test_token.py  test_ws_runtime_parity.py
tests/integration/: test_group_pipeline.py
tests/smoke/: test_live_group.py
