[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-openmax"
version = "0.1.4"
description = "CWS (OpenMax Workspace) channel for Hermes Agent: Python CWS agent SDK + Hermes platform adapter plugin"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "jsonschema>=4.21",  # contract conformance harness (tests/test_contract.py)
]

# Hermes pip-plugin discovery (hermes_agent.plugins entry-point group).
# Directory-install path (~/.hermes/plugins/hermes-openmax) works too via
# hermes_openmax/plugin.yaml + register(ctx).
[project.entry-points."hermes_agent.plugins"]
hermes-openmax = "hermes_openmax"

[tool.hatch.build.targets.wheel]
packages = ["cws_agent_sdk", "hermes_openmax"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests that require a real OpenMax environment and running Hermes gateway",
]
